[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xvfbwrapper"
version = "0.2.15dev0"
description = "Manage headless displays with Xvfb (X virtual framebuffer)"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">= 3.9"
keywords = ["Xvfb", "headless", "display", "X11", "X Window System"]
classifiers = [
        "Environment :: Console",
        "Environment :: X11 Applications",
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Information Technology",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/cgoldberg/xvfbwrapper"
source = "https://github.com/cgoldberg/xvfbwrapper"
download = "https://pypi.org/project/xvfbwrapper"

[dependency-groups]
dev = [
    "tox",
]
lint = [
    "black",
    "ruff",
]
test = [
    "pytest",
]
type = [
    "mypy",
]
validate = [
    "packaging",
    "validate-pyproject",
]

[tool.setuptools]
py-modules = ["xvfbwrapper"]

[tool.pytest.ini_options]
addopts = "-vv" # extra verbose

[tool.black]
line-length = 88
target-version = [
    "py39", "py310", "py311", "py312", "py313"
]

[tool.ruff]
line-length = 88
respect-gitignore = true
target-version = "py39"

[tool.ruff.lint]
select = [
    "D", "E", "F", "I", "RUF", "TID", "W"
]
extend-ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203",
    "D205", "D211", "D213", "D400", "D401", "RUF012"
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
