[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xvfbwrapper"
version = "0.2.26dev0"
description = "Manage headless displays with Xvfb (X virtual framebuffer)"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["Xvfb", "headless", "display", "X11", "X Window System"]
classifiers = [
        "Environment :: Console",
        "Environment :: X11 Applications",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/cgoldberg/xvfbwrapper"
source = "https://github.com/cgoldberg/xvfbwrapper"
download = "https://pypi.org/project/xvfbwrapper"

[dependency-groups]
dev = [
    "tox",
]
lint = [
    "ruff",
]
test = [
    "psutil",
    "pytest",
]
type = [
    "mypy",
    "types-psutil",
]
validate = [
    "packaging",
    "tomli",
    "validate-pyproject",
]

[tool.setuptools]
py-modules = ["xvfbwrapper"]

[tool.pytest]
addopts = ["-v"]

[tool.ruff]
line-length = 88
respect-gitignore = true
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN", "COM812", "D", "EM101", "EM102", "FBT", "PERF203",
    "PLR", "PT", "PYI034", "SLF001", "S101", "S108", "S311",
    "S603", "TRY003", "TRY400"
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
